# hw07-group10

./: .buildinfo  .gitignore  EDA.html  EDA.ipynb  LICENSE.html  Makefile  README.html  README.md  _config.yml  _toc.yml  conf.py  contribution_statement.html  contribution_statement.md  data_cleaning.html  data_cleaning.ipynb  environment.yml  envsetup.sh  genindex.html  grid.pkl  hw07-description.html  logistic_regression.ipynb  main.html  main.ipynb  models.html  models.ipynb  objects.inv  postBuild  random_forest.ipynb  random_forest.pkl  search.html  searchindex.js  setup.cfg
.github/workflows/: book.yml
_sources/: EDA.ipynb  README.md  contribution_statement.md  data_cleaning.ipynb  main.ipynb
data/: Algerian_forest_fires_dataset_CLEANED.csv
figures/: .gitignore
models/: random_forest_gridcv.pkl
tools/: utils.py
tools/tests/: test_utils.py
