[metadata]
name             = tools
version          = attr: tools.__version__
author           = Ingrid Chien, Johnson Du, Minori Jaggia, Leif Martin
author_email     = ingrid070401@berkeley.edu, etc;
description      = A package that manipulates data for forest fire classification. 
long_description = file: README.md
long_description_content_type = text/markdown
keywords         = tools
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = == 3.9.9,
install_requires =
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*
